.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

3.3.3 - Unreleased
------------------


- plone.css will now output stylesheets with link rendering
  Fixes http://dev.plone.org/plone/ticket/9366

  sitemap template now displays objects without a value for Title
  applied patch from crchemist
  Fixes http://dev.plone.org/plone/ticket/9775
  [aaronv]

- Removed option "Send a mail with the password" from the join form,
  as we never send an email with the password.
  Refs http://dev.plone.org/plone/ticket/9670
  [maurits,vincentpretre,jladage]

- Buttons on discussion form are now hidden from print view.
  Fixes http://dev.plone.org/plone/ticket/8460
  [lzdych]
  
- Added missing migration step to update permissions on "legacy" 
  workflows for new roles. Thanks to Vitaliy Podoba for the patch.
  This fixes http://dev.plone.org/plone/ticket/8905
  [amleczko]


3.3.2 - November 3, 2009
------------------------

- Shift "Item type" options under the advanced search page to the right
  when viewed for RTL scripts. This fixes
  http://dev.plone.org/plone/ticket/9666
  [emanlove]

- Make sure the folder_listing, folder_summary_view, and folder_tabular_view
  call getText with a full acquisition chain (but make the conditional for
  whether to display text test for the existence of getText on the aq_base'd
  context to avoid accidental acquisition).  This fixes
  http://dev.plone.org/plone/ticket/8463
  [davisagli]

- Use PlonePAS methods for adding and removing members from groups, as well
  as for listing group membership. These methods are PAS aware and thus work
  correctly with PAS plugins other than the GroupUserFolder. Thanks to 
  Giovanni Toffoli for the initial patch.
  Fixes http://dev.plone.org/plone/ticket/9163
  [mj]

- Fix linkintegrity-related issue regarding missing undo log entries after